<resources>
    <string name="app_name">PucSportMaster</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="stopString">Stop</string>
    <string name="startString">Start</string>
    <string name="pauseString">Pause</string>
    <string name="resumeString">Resume</string>
    <string name="distString">Distance</string>
    <string name="caloriesString">Calories</string>
    <string name="paceString">Pace</string>
    <string name="durString">Duration</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_search">PucWeather</string>
    <string name="buttontext">Submit</string>
    <string name="defaultCityName">no info</string>
    <string name="powered">powered by openweathermap.org</string>
    <string name="celsius">°C</string>
    <string name="title_activity_puc_sport_master_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="username">Username</string>
    <string name="idString">Id</string>
    <string name="dateString">Date</string>
    <string name="postTimeString">Post time</string>
    <string name="stats">Running Stats</string>
    <string name="dist">Distance</string>
    <string name="dur">Duration</string>
    <string name="avgspd">Average Speed</string>
    <string name="caloriesSpentString">Calories Spent</string>
    <string name="moreInfoString">More info</string>
    <string name="totalDistString">Total distance</string>
    <string name="TotalCalString">Total calories</string>
    <string name="runsString">Num. of runs</string>
    <string name="noString">No</string>
    <string name="yesString">Yes</string>
    <string name="registerString">Do you want to register as new user ?</string>
    <string name="Registration">Registration</string>
    <string name="email">Type email</string>
    <string name="pass">Type Password</string>
    <string name="userTypename">Type Username</string>
    <string name="finish">Finish</string>
    <string name="usernm">user</string>
    <string name="runsumm">Running Summary</string>
    <string name="totaldist">Total distance</string>
    <string name="caloriesSpenter">Calories spent</string>
    <string name="runners">Runs count</string>
    <string name="lstRunAct">Last Running Activities</string>
    <string name="desc">Description</string>
    <string name="example">Example application</string>
    <string name="summ">Last Running Summary</string>
    <string name="runnanim">Running animation</string>
    <string name="stopanim">Stop animation</string>
    <string name="calspnter">Calories spent:</string>
    <string name="avgspeeddot">Average Speed:</string>
    <string name="mxspeed">Max Speed:</string>
    <string name="totaldistdot">Total distance:</string>
    <string name="ttltime">Total time:</string>
    <string name="wrongpass">Wrong Password try again</string>
    <string name="infoTab">Information</string>
    <string name="BehTAb">Run</string>
    <string name="sumTab">Summary</string>
    <string name="geonotinst">Geolocation viewer is not installed.</string>
    <string name="nointcon">No internet Connection</string>
    <string name="maploaded">Map loaded</string>
    <string name="noperm">No permission granted</string>
    <string name="restartanim">Restart animation</string>
    <string name="animstopped">Animation Stopped</string>
    <string name="animrestarted">Animation Restarted</string>
    <string name="alreadyexist">Username already exist</string>
    <string name="emailexist">Email already exist</string>
    <string name="wrongemail">Wrong Email</string>
</resources>
